--- a/src/test/resources/Log4j.properties
+++ b/src/test/resources/Log4j.properties
@@ -4,7 +4,7 @@ log4j.rootLogger=DEBUG, toLogFile
 
 # Create  appender 'toFile' to send log to 'Server.log' file
 log4j.appender.toLogFile=org.apache.log4j.RollingFileAppender
-log4j.appender.toLogFile.File=Server.log
+log4j.appender.toLogFile.File=Debug.log
 log4j.appender.toLogFile.MaxFileSize=1MB
 log4j.appender.toLogFile.MaxBackupIndex=1
 log4j.appender.toLogFile.layout=org.apache.log4j.PatternLayout
